<resources>
    <string name="app_name">Namastey</string>
    <string name="prefix_name">link</string>
    <string name="facebook_app_id">242557967197480</string>
    <string name="fb_login_protocol_scheme">fb242557967197480</string>
    <string name="instagram_app_id">943839639712239</string>
    <string name="client_id">943839639712239</string>
    <string name="instagram_client_secret">c6586ca4c71cab48d25db85f78cb4898</string>
    <string name="callback_url">https://httpstat.us/200</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="snapchat_client_id">e60139af-eada-4c77-8b04-02ce5d195e7f</string>
    <string name="spotify_client_id">6133e980fbe149ed804371dfc1a4d3d1</string>
    <string name="spotify_redirect_uri">http://testyourapp.online/namasteyapp/</string>
    <string name="firebase_sender_id">949976136000</string>
    <string name="no_internet">Make you sure you are connected with internet</string>
    <string name="slow_internet">Your internet connection is very slow</string>
    <string name="server_error">Server Error</string>
    <string name="msg_empty_email">Please enter email address</string>
    <string name="msg_valid_email">Please enter valid email address</string>
    <string name="msg_empty_password">Please enter password</string>
    <string name="msg_empty_name">Please enter name</string>
    <string name="collection_online">Collections - Online</string>
    <string name="supplier_bills"><![CDATA[Supplier Bills, TDS & Payments]]></string>
    <string name="cashbook_expenses">Cash Book - Expenses</string>
    <string name="cashbook_receipts">Cash Book - Receipts, Tranfers, Deposits</string>
    <string name="scan_document">Scan Documents</string>
    <string name="permission_required">Permission required</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="gps_disable_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="permission_denied_message">you have denied location permission, kindly change your location settings to use namastey</string>
    <string name="permission_denied_storage_message">You have denied storage permission Allow permission at setting</string>
    <string name="permission_denied_camera_message">You have denied camera permission Allow permission at setting</string>
    <string name="permission_denied_contact_message">You have denied contact permission Allow permission at setting</string>
    <string name="location_permission_message">Namastey uses your location to show you profiles in the distance range you select.</string>
    <string name="tv_skip">Skip</string>
    <string name="tv_the_video_profile">The Video Profile</string>
    <string name="tv_term_condition_message_temp">We don\'t post anythings to your Facebook or Snapchat. By continuing, you agree to our <![CDATA[<u><font color=#000000>Terms of service</font></u> and <u><font color=#000000>Privacy Policy </font></u>.]]></string>
    <string name="tv_term_condition_message1"><![CDATA[<u><font color=#000000>Terms of service</font></u> | <u><font color=#000000>Privacy Policy </font></u>.]]></string>
    <string name="tv_term_condition_message">By creating an account or logging in, you agree to our Terms of service | Privacy Policy</string>
    <string name="tv_terms">Terms of service</string>
    <string name="tv_policy">Privacy Policy</string>
    <string name="tv_term_link">https://www.namasteyapp.com/terms-of-use</string>
    <string name="tv_policy_link">https://www.namasteyapp.com/privacy-policy</string>
    <string name="tv_billing_link">https://www.namasteyapp.com/billingterms</string>
    <string name="tv_invite_link">https://www.namasteyapp.com/app-landing-page</string>
    <string name="tv_early_access">https://www.namasteyapp.com/earlyaccess</string>
    <string name="dynamic_link_msg">Hey, check this out on namastey app \n</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="btn_sign_facebook">Continue with Facebook</string>
    <string name="btn_signup_google">Continue with Google</string>
    <string name="btn_signup_phone_mail">Phone / Mail</string>
    <string name="btn_signup_snapchat">Continue with Snapchat</string>
    <string name="btn_signup_tiktok">Continue with Tik Tok</string>
    <string name="btn_signup">Sign up</string>
    <string name="btn_complete_profile">Complete Profile</string>
    <string name="connect_socials">Connect Socials</string>
    <string name="msg_connect_socials">Connect your social media handles to your profile</string>
    <string name="connect_facebook">Connect Facebook</string>
    <string name="connect_instagram">Connect Instagram</string>
    <string name="connect_twitter">Connect Twitter</string>
    <string name="connect_spotify">Connect Spotify</string>
    <string name="add_video">Add Video</string>
    <string name="msg_add_video_first">Upload atleast one video to match</string>
    <string name="msg_add_video_second">You need to upload genuine content showcasing your personality, keep it real!</string>
    <string name="msg_no_invite">Sorry! But you don’t have an invitation to join Namastey</string>
    <string name="msg_no_invite_second">To learn more about namastey, you can visit our Website</string>
    <string name="got_your_invitation">Got your invitation? Sign in</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="send_otp">Send OTP</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="tv_veryfi_otp">Verify OTP</string>
    <string name="tv_sent_otp">We have sent you an OTP</string>
    <string name="tv_otp_message">Enter the 6 digit OTP you received</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_phone">Enter phone number</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="tv_terms_msg">By creating an account or logging in, you agree to our </string>
    <string name="tv_login_using_phone">Login using your Phone \nnumber</string>
    <string name="msg_empty_mobile">Please enter mobile number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your full name</string>
    <string name="choose_username">Choose your username</string>
    <string name="hint_full_name">Full Name</string>
    <string name="msg_gender">Let us know your gender</string>
    <string name="female">Female</string>
    <string name="non_binary">Non- binary</string>
    <string name="select">Select</string>
    <string name="msg_interested">Whom are you interested in?</string>
    <string name="msg_birthday">Help us calculate your age</string>
    <string name="msg_age">Select your preferred age range</string>
    <string name="you_can_always">You can always change it later</string>
    <string name="select_maximum_distance">Select your preferred search distance</string>
    <string name="msg_education">What is your educational qualification?</string>
    <string name="occupation">Occupation</string>
    <string name="msg_occupation">What do you do for a living?</string>
    <string name="msg_empty_education">Please enter education</string>
    <string name="add_profile_pic">Add Profile Picture</string>
    <string name="interest">Interest</string>
    <string name="hint_type_here">Type here...</string>
    <string name="msg_interest">Choose 09 topics that best describe your personality</string>
    <string name="about_you">About you</string>
    <string name="msg_about_you">Tell people about yourself</string>
    <string name="empty_full_name">Please enter full name</string>
    <string name="empty_username">Please enter username</string>
    <string name="empty_username_minimum">Please enter username minimum 5 character</string>
    <string name="empty_interest_in">Please select Interested In</string>
    <string name="select_profile_pic">Please select Profile pic</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_gender_message">Gender cannot be changed later.</string>
    <string name="date_of_birth">Birthday</string>
    <string name="date_of_birth_message">Your age must be 18 years to 45 years to join namastey.</string>
    <string name="select_video_language">Select Video Language</string>
    <string name="select_language">Select language</string>
    <string name="choose_interest">Choose your interest</string>
    <string name="tv_select">Select</string>
    <string name="views">Views</string>
    <string name="guest_user">Guest User</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="un_follow">Unfollow</string>
    <string name="pending">Pending</string>
    <string name="remove">Remove</string>
    <string name="about_me">About me</string>
    <string name="passport">Passport</string>
    <string name="airport">Airport</string>
    <string name="membership">Membership</string>
    <string name="get_more">Get more</string>
    <string name="about_me_empty">Description not added</string>
    <string name="about_me_text">Write something about you &amp; complete your profile</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text.</string>
    <string name="profile_link_msg">This is %1$s profile. \n</string>
    <string name="profile_link">To visit profile click on username <a href='To visit profile click on username'> <![CDATA[<u><font color=#F30C45>%1$s</font></u>]]></a></string>
    <string name="matched">Matched</string>
    <string name="matches">Matches</string>
    <string name="view_all">View All</string>
    <string name="follow">Follow</string>
    <string name="msg_empty_mobile_email">Please enter mobile/email</string>
    <string name="msg_empty_otp">Please enter OTP</string>
    <string name="view">View</string>
    <string name="select_country">Select country/region</string>
    <string name="user">User</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="privacy">Privacy</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="hint_add_comments">Add Comments</string>
    <string name="msg_send_follow_request">Send follow request?</string>
    <string name="msg_report_user">Do you want to report this user?</string>
    <string name="report_user">Report User</string>
    <string name="no_thanks">No thanks</string>
    <string name="its_spam">It\'s Spam</string>
    <string name="its_inappropriate">It\'s inappropriate</string>
    <string name="msg_block_user">Do you want to block this user?</string>
    <string name="block_user">Block User</string>
    <string name="discover">Discover</string>
    <string name="education">Education</string>
    <string name="male">Male</string>
    <string name="msg_empty_occupation">Please enter occupation</string>
    <string name="user_name">Username</string>
    <string name="gender">Gender</string>
    <string name="continues">Continue</string>
    <string name="no__internet">No Internet!</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="try_again">Try Again</string>
</resources>