<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.AboutActivity">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:contentDescription="@string/app_name"
            android:onClick="onClickBack"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/tv_skip"
            android:onClick="onClickSkip"
            android:textColor="@color/color_text_red"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvAbout"
            style="@style/tvWrapBlackStyle"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/about_you"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack"
            app:typeface="MULI_SEMIBOLD" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvAboutMsg"
            style="@style/tvWrapBlackStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/msg_about_you"
            app:layout_constraintStart_toStartOf="@id/tvAbout"
            app:layout_constraintTop_toBottomOf="@id/tvAbout" />

        <com.namastey.customViews.CustomEditText
            android:id="@+id/edtAbout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/rounded_white_solid_white_corner"
            android:gravity="top"
            android:hint="@string/hint_type_here"
            app:layout_constraintTop_toBottomOf="@id/tvAboutMsg" />


        <com.namastey.customViews.CustomButton
            android:id="@+id/btnContinue"
            style="@style/btnRedAllCornerStyle"
            android:layout_marginBottom="@dimen/_25sdp"
            android:onClick="onClickContinue"
            android:text="@string/continues"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:stateListAnimator="@null"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>