<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.Html" />

        <variable
            name="viewModel"
            type="com.namastey.viewModel.EducationViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/ivEducationBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:contentDescription="@string/app_name"
            android:onClick="onClickEducatoinBack"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_back_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/tv_skip"
            android:onClick="onClickSkip"
            android:textColor="@color/color_text_red"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/ivEducationBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivEducationBack" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvEducation"
            style="@style/tvWrapBlackStyle"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/education"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivEducationBack"
            app:typeface="MULI_SEMIBOLD" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvEducationMsg"
            style="@style/tvWrapBlackStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/msg_education"
            app:layout_constraintStart_toStartOf="@id/tvEducation"
            app:layout_constraintTop_toBottomOf="@id/tvEducation" />

        <com.namastey.customViews.CustomEditText
            android:id="@+id/edtEducation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/rounded_white_solid_white_corner"
            android:hint="@string/msg_empty_education"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvEducation"
            app:layout_constraintTop_toBottomOf="@id/tvEducationMsg" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvOccupation"
            style="@style/tvWrapBlackStyle"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/occupation"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtEducation"
            app:typeface="MULI_SEMIBOLD" />

        <com.namastey.customViews.CustomTextView
            android:id="@+id/tvOccupationMsg"
            style="@style/tvWrapBlackStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/msg_occupation"
            app:layout_constraintStart_toStartOf="@id/tvOccupation"
            app:layout_constraintTop_toBottomOf="@id/tvOccupation" />

        <com.namastey.customViews.CustomEditText
            android:id="@+id/edtOccupation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/rounded_white_solid_white_corner"
            android:hint="@string/msg_empty_occupation"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvOccupation"
            app:layout_constraintTop_toBottomOf="@id/tvOccupationMsg" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.namastey.customViews.CustomButton
            android:id="@+id/btnContinue"
            style="@style/btnRedAllCornerStyle"
            android:layout_marginBottom="@dimen/_25sdp"
            android:onClick="onClickContinue"
            android:text="@string/continues"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:stateListAnimator="@null"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>