<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.NoInternetActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/block" />

    <com.namastey.customViews.CustomTextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/no__internet"
        android:textSize="20sp" />

    <com.namastey.customViews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/please_check_your_internet_connection"
        android:textColor="@color/color_black_text"
        android:textSize="16sp" />

    <com.namastey.customViews.CustomButton
        android:id="@+id/tryagainbtn"
        style="@style/btnGreyAllCornerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        />

</LinearLayout>